# Django_homework

./: pyproject.toml
src/: index.html  main.py
